# TripWaver

./: .dockerignore  .env  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  INTERVIEW_PREP.md  ISSUES.md  PROGRESS.md  README.md  SKILL.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: API.md  iteration_001_observability.md  iteration_002_validation.md  iteration_003_logging.md  iteration_004_pool.md  iteration_005_timeout.md  iteration_006_gzip.md  iteration_007_body_limit.md  iteration_008_security_headers.md  iteration_009_refresh_token.md  iteration_010_edit.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: auth.ts  itinerary.ts  lock.ts  share.ts  vote.ts
frontend/src/components/: ConfirmDialog.vue  DayCard.vue  MapView.vue  MemberList.vue  ShareDialog.vue  TripForm.vue  TripList.vue  TripResult.vue  VotePanel.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  trip.ts
frontend/src/types/: amap.d.ts  auth.ts  itinerary.ts  share.ts  vote.ts
frontend/src/utils/: format.ts  vote.ts
frontend/src/views/: HomePage.vue  LoginPage.vue  SelectPOIPage.vue  SharePage.vue  TripDetailPage.vue
migrations/: env.py
migrations/versions/: e53602af1ab9_初始表结构.py
src/tripweaver/: __init__.py  main.py
src/tripweaver/core/: db.py  (+10 more)
tests/: test_cache.py  test_cors.py  test_docker.py  test_errors.py  test_itineraries.py  test_itinerary_ext.py  test_llm_prompt.py  test_logging.py  test_migration.py  test_planner.py  test_providers.py  test_schemas.py
(+25 files in other folders)
